--- a/Search-UI/CognitiveSearch.UI/wwwroot/css/navbar.css
+++ b/Search-UI/CognitiveSearch.UI/wwwroot/css/navbar.css
@@ -1,1 +1,1 @@
-.navbar-bg{background-color:#ffffff}.navbar-text-color{color:#000000}
+.navbar-bg{background-color:#f8f7f7}.footer-bg{background-color:#f8f7f7}.navbar-text-color{color:#000000}
